# CVMiniProject

./: .gitignore  README.md  flake.nix  pyproject.toml
.direnv/: flake-profile-4-link
srcs/: main.py  mini_project.ipynb  test.ipynb
srcs/lib/: ridge_filter.py
