[tool.poetry]
name = "mini_project"
version = "1.0.0"
description = "Computer Vision"
authors = [
    "Tanawat Jukmongkol <66011255@kmitl.ac.th>",
    "Danit Kleiner <66011531@kmitl.ac.th>",
    "Putt Puttstit <66011186@kmitl.ac.th>",
    "Nathawat Triakarasit <66011556@kmitl.ac.th>"
]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pip = "^24.3.1"
ipython = "^8.31.0"
ipykernel = "^6.29.5"
jupyter = "^1.1.1"
notebook = "^7.3.2"
scikit-image = "^0.25.2"

opencv-python = "^4.11.0.86"
numpy = "^2.2.2"
matplotlib = "^3.10.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
in-project = true